--- a/index.html
+++ b/index.html
@@ -1,94 +1,87 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html
+  PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-    <title>Online Examination</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <title>MPS</title>
+  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+  <link href="layout.css" rel="stylesheet" type="text/css" media="screen" />
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
 </head>
 
 <body>
-
-    <div class="main-container">
-        <header>
-            <img class="img-banner" src="http://examdelhi.com/images/slider/1.jpg">
-        </header>
-        <div class="topnav">
-            <a href="index.html"><i class="fas fa-home"></i> Home</a>
-            <a href="list.html">List</a>
-            <a href="#">About Us</a>
-			<a href="motive.html">Motivation</a>
-            <a href="Registration.html" class="right">Registation</a>
-            <a href="#" class="right">Login</a>
-        </div>
-        <section>
-            <article id="home">
-                Free online test to practice for Competitive exams.
-                Aptitude, Logical Reasoning, Computer Questions will help you to prepare for Online Exam,
-                Entrance and Interview. Learn and Practice online test for Free and Prepare for your exam
-                online with many free tests and study materials with answers and explanation.
-                <p>
-                    This is the last online examination system you will ever need!
-                    With our easy online exam builder you will set up your own engaging exams
-                    that fit any kind of difficulty level. Build and create your online exams &
-                    tests with great ease and provide your users with appropriate feedback,
-                    so they will have a rich learning experience.
-                </p>
-
-            </article>
-            <hr>
-             
-
-        </section>
-
-                <footer>
-            <table class="tbl-footer">
-                <tr style="vertical-align: top;">
-                    <td style="width: 33.33%;">
-                        <h3>
-                            Contact Information </h3>
-
-                        <div style="font-size: small; margin-top: 10px;">
-                            <ul>
-                                <li><a class="fb" href="#"><i></i>Like us on Facebook</a></li>
-                                <li><a class="fb1" href="#"><i></i>Follow us on Twitter</a></li>
-                                <li><a class="fb2" href="#"><i></i>Add us on Google Plus</a></li>
-                                <li><a class="fb3" href="#"><i></i>Follow us on Dribbble</a></li>
-                                <li><a class="fb4" href="#"><i></i>Follow us on Pinterest</a></li>
-                            </ul>
-                        </div>
-                    </td>
-                    <td style="width: 33.33%;">
-                        <h3>
-                            Keep Connected
-                        </h3>
-                        <div style="font-size: small; margin-top: 10px;">
-                            <ul>
-                                <li>The company name <span>Lorem ipsum dolor,</span>Glasglow Dr 40 Fe 72. </li>
-                                <li>1234567890 </li>
-                                <li><a href="mailto:info@example.com">contact@example.com</a> </li>
-                            </ul>
-                        </div>
-                    </td>
-                    <td style="width: 33.33%;">
-                        <h3 style="text-align: right;">
-                            More About Company
-                        </h3>
-                        <div style="font-size: small; margin-top: 10px;">
-                            <ul>
-                                <p> Nemo enim ipsam voluptatem quia
-                                    voluptas sit aspernatur aut odit aut fugit,
-                                    sed quia consequuntur magni dolores eos qui
-                                    ratione voluptatem sequi nesciunt.</p>
-                        </div>
-                    </td>
-                </tr>
-            </table>
-        </footer>
+  <div id="header">
+    <div id="logo">
+      <h1>MAHARASHTRA PUBLIC SCHOOL</h1>
+      <p><a href="#"></a></p>
     </div>
-
-</body>
+  </div>
+  <div id="navigation">
+    <ul>
+      <li><a href="index.html" class="first">Home</a></li>
+      <li><a href="aboutus.html">About Us</a></li>
+      <!-- <li><a href="admition.html">Admitions</a></li> -->
+      <li><a href="careers.html">Careers</a></li>
+      <li><a href="gallary.html">Gallary</a></li>
+      <li><a href="contactUs.html">Contact Us</a></li>
+    </ul>  
+    <div class="dropdown">
+      <button class="dropbtn">Admitions
+        <i class="fa fa-caret-down"></i>
+      </button>
+      <div class="dropdown-content">
+        <a href="admition.html">Admitions Details</a>
+        <a href="admitionForm.html">Admitions Form</a>          
+      </div>
+    </div>
+  </div>
+  <!-- <div class="navbar">       
+    <div class="dropdown">
+      <button class="dropbtn">Dropdown
+        <i class="fa fa-caret-down"></i>
+      </button>
+      <div class="dropdown-content">
+        <a href="#">Link 1</a>
+        <a href="#">Link 2</a>
+        <a href="#">Link 3</a>
+      </div>
+    </div>
+  </div> -->
+  <div id="content">
+    <div id="page">
+      <section id="home">
+        <div id="column1">
+          <div class="box1">
+            <h2>WELCOME TO MPS PUNE </h2>
+            <p>MPS Pune is one of the most trusted name in quality education, which is recognized throughout the
+              academic world for its progressive approach and commitment to excellence. Maharashtra Public School Pune
+              was the second initiative of Takshila Educational Society. It was established in 2003 and is a
+              collaborative effort with the Maharashtra Public Schools Society, which is one of the largest chains of
+              CBSE schools in India. MPS Pune is affiliated to CBSE, New Maharashtra and offers schooling from Nursery
+              to Class XII.</p>
+            <p> In a very short span of time MPS Pune has established itself as one of the best K-12 institutions in
+              western India. MPS has proliferated into a multidisciplinary institution, offering various facilities to
+              impart varied expertise to keep pace with the world .The school offers courses that focus on holistic
+              development of individuals by cultivating their unique talents.</p>
+          </div>
+        </div>
+        <div id="column2">
+          <h2>Latest News</h2>
+          <ul>
+            <li><a href="#">TIME TABLE - PRE-BOARD-2 CLASS X & XII</a></li>
+            <li><a href="#">TIME TABLE FOR POST-MID TERM ASSESSMENTS - VI-IX&XI</a></li>
+            <li><a href="#">TIME TABLE FOR POST -MID TERM ASSESSMENTS - IV & V</a></li>
+            <li><a href="#">ANNUAL FUNCTION - CLASS III</a></li>
+            <li><a href="#">ANNUAL FUNCTION - CLASS II</a></li>
+            <li><a href="#">ANNUAL FUNCTION - CLASS I</a></li>
+          </ul>
+        </div>
+      </section>
+    </div>
+    <div style="clear: both;">&nbsp;</div>
+  </div>
+  <div id="footer">
+    <p>&copy;&nbsp;Copyright 2020. All Rights Reserved | Design by Sarita Goutam </p>
+  </div>
 
 </html>
